# grepru

./: Cargo.toml  README.md  words.txt
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/cli/: cli.rs  mod.rs
src/text/: text.rs
tests/: cli.rs
