[package]
name = "grepru"
version = "0.1.0"
authors = ["alexjuca <alexandre.juca@nextbss.co.ao>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1.0.5"
tempfile = "3"
yansi = "0.5.0"